--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.main{
+	width: 150px;
+	height: 150px;
+	background-color: black;
+	
+}
+.p{
+	textcolor:white;
+	left margin: 32px;
+	padding: 10px;
+}
