--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 .main{
 	width: 150px;
 	height: 150px;
-	background-color: black;
+	background-color: rgb(255 255 255);
 	
 }
 .p{
 	textcolor:white;
-	left margin: 32px;
+
 	padding: 10px;
 }
